[tool.poetry]
name = "ovarian-webapp"
version = "0.1.0"
description = ""
authors = ["ryanlupague <ryan.lupague@indebted.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "2.16.1"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
split-folders = "^0.5.1"
seaborn = "^0.13.2"
opencv-python = "^4.9.0.80"
scipy = "^1.13.1"
scikit-image = "^0.23.2"
python-docx = "^1.1.2"
tf-keras-vis = "^0.8.7"
tensorflow-metal = "^1.1.0"
tensorflow-datasets = "^4.9.4"
streamlit = "^1.36.0"
streamlit-extras = "^0.4.3"
streamlit-option-menu = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
